--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Robert Jackson <me@rwjblue.com>",
   "license": "MIT",
   "dependencies": {
+    "lerna-changelog": "^0.8.2",
     "release-it": "^12.0.1"
   }
 }
