--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
   "repository": "https://github.com/rwjblue/release-it-lerna-changelog",
   "author": "Robert Jackson <me@rwjblue.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">= 8"
+  },
   "dependencies": {
     "lerna-changelog": "^0.8.2",
     "release-it": "^12.0.1"
   },
   "devDependencies": {
-    "ava": "^1.4.1"
+    "ava": "^1.4.1",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "^1.17.0"
   }
 }
