--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "engines": {
     "node": ">= 8"
   },
+  "scripts": {
+    "lint:js": "eslint .",
+    "test": "ava"
+  },
   "dependencies": {
     "lerna-changelog": "^0.8.2",
     "release-it": "^12.0.1"
