--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-node": "^9.0.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "sinon": "^7.3.2"
   }
 }
