Only publish `index.js`.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "engines": {
     "node": ">= 8"
   },
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "lint:js": "eslint .",
     "test": "ava"
