--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "github": {
       "release": true
     }
+  },
+    "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
