--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
         "infile": "CHANGELOG.md"
       }
     },
+    "git": {
+      "tagName": "v${version}"
+    },
     "github": {
       "release": true
     }
