Add ability to open generated changelog for editing.
Introduces a new option to be specified: `launchEditor`. When specified,
`release-it-lerna-changelog` will generate the changelog with
`lerna-changelog` (just like it has always done) then launch the
configured editor with a temporary file. This allows the person doing
the release to customize the changelog before continuing.

There are a few valid values for `launchEditor`:

* `false` - Disables the feature.
* `true` - The `process.env.EDITOR` value will be used
* any string - This string will be used as if it were a command. In
  order to interpolate the temporary file path in the string, you can
  use `${file}` in your configuration.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "lerna-changelog": "^1.0.1",
-    "release-it": "^13.0.2"
+    "release-it": "^13.0.2",
+    "tmp": "^0.1.0"
   },
   "devDependencies": {
     "ava": "^3.5.0",
@@ -32,8 +33,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
-    "sinon": "^9.0.0",
-    "tmp": "^0.1.0"
+    "sinon": "^9.0.0"
   },
   "engines": {
     "node": ">= 10"
@@ -44,7 +44,8 @@
   "release-it": {
     "plugins": {
       "./index.js": {
-        "infile": "CHANGELOG.md"
+        "infile": "CHANGELOG.md",
+        "launchEditor": "nvim"
       }
     },
     "git": {
