Address review comments
* Add nice error when `$EDITOR` is not set properly, but `launchEditor:
  true` is specified.
* Refactor README documentation of options to make it clearer what is
  allowed
* Force `ava` to run serially (without this the tests run in parallel
  and mutate `process.env` causing failures dependent on timing).
* Update `_execLernaChangelog` signature to be less nuts

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "lint:js": "eslint .",
     "test": "ava"
   },
+  "ava": {
+    "serial": true
+  },
   "dependencies": {
     "lerna-changelog": "^1.0.1",
     "release-it": "^13.0.2",
