Use `launchEditor: true` (uses system EDITOR).

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "plugins": {
       "./index.js": {
         "infile": "CHANGELOG.md",
-        "launchEditor": "nvim"
+        "launchEditor": true
       }
     },
     "git": {
