Use execa.command instead of this.exect for `launchEditor`.
When using `this.exec` it is impossible to inherit stdio, this means
that the $EDITOR process _is_ launched but has no effect because it
doesn't inherit the stdout/stdin/stderr.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "serial": true
   },
   "dependencies": {
+    "execa": "^4.0.0",
     "lerna-changelog": "^1.0.1",
     "release-it": "^13.0.2",
     "tmp": "^0.1.0"
