--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "execa": "^4.0.0",
     "lerna-changelog": "^1.0.1",
     "release-it": "^13.5.4",
-    "tmp": "^0.1.0"
+    "tmp": "^0.1.0",
+    "which": "^2.0.2"
   },
   "devDependencies": {
     "ava": "^3.7.1",
