--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: "Node ${{ matrix.node-version }}"
 
     runs-on: ubuntu-latest
 
@@ -17,13 +18,30 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - name: install dependencies
-      run: yarn install --non-interactive
-    - name: lint
-      run: yarn lint:js
-    - name: test
-      run: yarn test
+      run: yarn install --non-interactive --frozen-lockfile
+    - run: yarn lint:js
+    - run: yarn test
+
+  release-it-compat:
+    name: "release-it@${{ matrix.release-it-version }}"
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        release-it-version: [13, 14]
+
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 14
+    - name: install dependencies
+      run: yarn install --non-interactive --frozen-lockfile
+    - run: yarn add --dev release-it@^${{ matrix.release-it-version }}
+    - run: yarn lint:js
+    - run: yarn test
