Drop Node 11 and 13 support.
Both of these Node versions have been EOL'ed.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "sinon": "^9.1.0"
   },
   "engines": {
-    "node": ">= 10"
+    "node": "10.* || 12.* || >= 14"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
