--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "execa": "^4.0.3",
     "lerna-changelog": "^1.0.1",
+    "mdast-util-from-markdown": "^0.8.1",
     "tmp": "^0.2.1",
     "validate-peer-dependencies": "^1.0.0",
     "which": "^2.0.2"
