--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
-    "release-it": "^14.11.6"
+    "release-it": "^14.11.6",
+    "sinon": "^11.1.2"
   },
   "peerDependencies": {
     "release-it": "^14.0.0"
