--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   "devDependencies": {
     "ava": "^3.15.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1",
     "release-it": "^14.10.1",
     "sinon": "^9.2.4"
   },
@@ -47,7 +47,7 @@
     "release-it": "^14.0.0"
   },
   "engines": {
-    "node": "12.* || 14.* || >= 16"
+    "node": "^12.20.0 || ^14.13.1 || >= 16"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
