--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: actions/setup-node@v2.4.1
       with:
         node-version: 14.x
+        cache: npm
     - run: npm ci
     - run: npm run lint:js
 
@@ -32,6 +33,7 @@ jobs:
     - uses: actions/setup-node@v2.4.1
       with:
         node-version: ${{ matrix.node-version }}
+        cache: npm
     - name: install dependencies
       run: npm ci
     - run: npm test
@@ -50,6 +52,7 @@ jobs:
     - uses: actions/setup-node@v2.4.1
       with:
         node-version: 14
+        cache: npm
     - name: install dependencies
       run: npm ci
     - run: npm install --saveDev release-it@${{ matrix.release-it-version }}
