Enable usage of this plugin by release-it's `require` based system
Since the move to `type: modules` in package.json this package no longer
works within `release-it`'s normal plugin resolution / resolving steps
(because it is internally using `import-from` which is basically just
doing `require` relative to the current working directory; and you can't
`require` a ES modules based file).

This adds a very simple wrapper script and leverages the pre-existing
static async method `isEnabled` on the plugin instance to absorb async
from a dynamic `import()` expression. The `PluginClass.isEnabled()` hook
is always called before `new PluginClass` is called, so this system of
absorbing the async in `isEnabled` then returning an instance of "the
real plugin" from the fake plugin's constructor is pretty safe.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
     "release-it": "^14.11.6",
     "sinon": "^11.1.2"
   },
+  "exports": {
+    ".": {
+      "import": "./index.js",
+      "require": "./cjs-wrapper.cjs"
+    }
+  },
   "peerDependencies": {
     "release-it": "^14.0.0"
   },
@@ -54,7 +60,7 @@
   },
   "release-it": {
     "plugins": {
-      "./index.js": {
+      "./cjs-wrapper.cjs": {
         "infile": "CHANGELOG.md",
         "launchEditor": true
       }
