--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "execa": "^5.1.1",
     "lerna-changelog": "^2.2.0",
+    "lodash.template": "^4.5.0",
     "mdast-util-from-markdown": "^1.0.4",
     "tmp": "^0.2.1",
     "validate-peer-dependencies": "^2.0.0",
@@ -41,7 +42,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
-    "release-it": "^14.11.6",
+    "release-it": "^15.1.0",
     "sinon": "^11.1.2"
   },
   "exports": {
@@ -51,7 +52,7 @@
     }
   },
   "peerDependencies": {
-    "release-it": "^14.0.0"
+    "release-it": "^14.0.0 || ^15.0.0"
   },
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >= 16"
