--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "release-it": "^14.0.0 || ^15.0.0"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >= 16"
+    "node": "^14.13.1 || >= 16"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
