--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "jest-environment-node": "^28.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
-    "release-it": "^15.1.2",
+    "release-it": "15.1.1",
     "sinon": "^11.1.2"
   },
   "exports": {
@@ -53,7 +53,7 @@
     }
   },
   "peerDependencies": {
-    "release-it": "^14.0.0 || ^15.1.2"
+    "release-it": "^14.0.0 || ^15.0.0"
   },
   "engines": {
     "node": "^14.13.1 || >= 16"
