Fixing repo URL in package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "changelog",
     "lerna"
   ],
-  "repository": "https://github.com/@release-it-plugins/lerna-changelog",
+  "repository": "https://github.com/release-it-plugins/lerna-changelog",
   "license": "MIT",
   "author": "Robert Jackson <me@rwjblue.com>",
   "main": "index.js",
