--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,13 +45,13 @@ jobs:
 
     strategy:
       matrix:
-        release-it-version: ["14.0.0", "14.1.0", "14.2.0", "15.1.3", "^15.0.0"]
+        release-it-version: ["14.0.0", "14.1.0", "14.2.0", "15.1.3", "^15.0.0", "^16.0.0"]
 
     steps:
     - uses: actions/checkout@v3.0.2
     - uses: actions/setup-node@v3
       with:
-        node-version: 14
+        node-version: 16
         cache: npm
     - name: install dependencies
       run: npm ci
