--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "sinon": "^14.0.0"
   },
   "peerDependencies": {
-    "release-it": "^14.0.0 || ^15.1.3"
+    "release-it": "^14.0.0 || ^15.1.3 || ^16.0.0"
   },
   "engines": {
     "node": "^14.13.1 || >= 16"
