--- a/package.json
+++ b/package.json
@@ -49,18 +49,18 @@
     "jest-environment-node": "^28.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "release-it": "^15.1.3",
+    "release-it": "^16.1.0",
     "sinon": "^14.0.0"
   },
   "peerDependencies": {
-    "release-it": "^14.0.0 || ^15.1.3"
+    "release-it": "^14.0.0 || ^15.1.3 || ^16.0.0"
   },
   "engines": {
-    "node": "^14.13.1 || >= 16"
+    "node": ">= 16"
   },
   "volta": {
-    "node": "14.18.1",
-    "npm": "8.0.0"
+    "node": "16.20.1",
+    "npm": "9.8.0"
   },
   "publishConfig": {
     "access": "public",
