--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3.0.2
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 14.x
-        cache: npm
+    - uses: volta-cli/action@v4
     - run: npm ci
     - run: npm run lint:js
 
@@ -30,10 +27,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3.0.2
-    - uses: actions/setup-node@v3
+    - uses: volta-cli/action@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: npm
     - name: install dependencies
       run: npm ci
     - run: npm run test:jest
@@ -45,14 +41,11 @@ jobs:
 
     strategy:
       matrix:
-        release-it-version: ["14.0.0", "14.1.0", "14.2.0", "15.1.3", "^15.0.0"]
+        release-it-version: ["14.0.0", "14.1.0", "14.2.0", "15.1.3", "^15.0.0", "^16.0.0"]
 
     steps:
     - uses: actions/checkout@v3.0.2
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 14
-        cache: npm
+    - uses: volta-cli/action@v4
     - name: install dependencies
       run: npm ci
     - run: npm install --saveDev release-it@${{ matrix.release-it-version }}
