--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: install dependencies
       run: npm ci
-    - run: npm run test:jest
+    - run: npm run test:vitest
 
   release-it-compat:
     name: "release-it@${{ matrix.release-it-version }}"
@@ -49,4 +49,4 @@ jobs:
     - name: install dependencies
       run: npm ci
     - run: npm install --saveDev release-it@${{ matrix.release-it-version }}
-    - run: npm run test:jest
+    - run: npm run test:vitest
