--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   ],
   "scripts": {
     "lint:js": "eslint .",
-    "test": "npm-run-all lint:js test:jest",
-    "test:jest": "NODE_OPTIONS=--experimental-vm-modules yarn jest"
+    "test": "npm-run-all lint:js test:vitest",
+    "test:vitest": "vitest run"
   },
   "dependencies": {
     "execa": "^5.1.1",
@@ -40,17 +40,15 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
-    "@jest/globals": "^28.1.2",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.2",
-    "jest-environment-node": "^29.6.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "release-it": "^16.1.0",
-    "sinon": "^14.0.0"
+    "sinon": "^14.0.0",
+    "vitest": "^0.33.0"
   },
   "peerDependencies": {
     "release-it": "^14.0.0 || ^15.1.3 || ^16.0.0"
