--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,16 @@
 name: CI
 
 on:
+  pull_request:
   push:
     branches:
       - master
-  pull_request:
+    tags:
+      - '*'
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3.5.3
-    - uses: volta-cli/action@v4
-    - run: npm ci
-    - run: npm run lint:js
-
   build:
-    name: "Node ${{ matrix.node-version }}"
+    name: 'Node ${{ matrix.node-version }}'
 
     runs-on: ubuntu-latest
 
@@ -26,27 +19,27 @@ jobs:
         node-version: [16.x, 18.x]
 
     steps:
-    - uses: actions/checkout@v3.5.3
-    - uses: volta-cli/action@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: install dependencies
-      run: npm ci
-    - run: npm run test:vitest
+      - uses: actions/checkout@v3.5.3
+      - uses: volta-cli/action@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: install dependencies
+        run: npm ci
+      - run: npm test
 
   release-it-compat:
-    name: "release-it@${{ matrix.release-it-version }}"
+    name: 'release-it@${{ matrix.release-it-version }}'
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        release-it-version: ["14.0.0", "14.1.0", "14.2.0", "15.1.3", "^15.0.0", "^16.0.0"]
+        release-it-version: ['14.0.0', '14.1.0', '14.2.0', '15.1.3', '^15.0.0', '^16.0.0']
 
     steps:
-    - uses: actions/checkout@v3.5.3
-    - uses: volta-cli/action@v4
-    - name: install dependencies
-      run: npm ci
-    - run: npm install --saveDev release-it@${{ matrix.release-it-version }}
-    - run: npm run test:vitest
+      - uses: actions/checkout@v3.5.3
+      - uses: volta-cli/action@v4
+      - name: install dependencies
+        run: npm ci
+      - run: npm install --saveDev release-it@${{ matrix.release-it-version }}
+      - run: npm test
