--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "release-it": "^16.1.0",
+    "release-it": "^17.0.0",
     "sinon": "^14.0.0",
     "vitest": "^0.33.0"
   },
   "peerDependencies": {
-    "release-it": "^14.0.0 || ^15.1.3 || ^16.0.0"
+    "release-it": "^14.0.0 || ^15.1.3 || ^16.0.0 || ^17.0.0"
   },
   "engines": {
     "node": ">= 16"
