--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "execa": "^5.1.1",
     "lerna-changelog": "^2.2.0",
-    "lodash.template": "^4.5.0",
+    "lodash": "^4.17.21",
     "mdast-util-from-markdown": "^1.2.0",
     "tmp": "^0.2.1",
     "validate-peer-dependencies": "^2.0.0",
