--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,10 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v3.5.3
+      - uses: actions/checkout@v4.1.6
       - uses: volta-cli/action@v4
         with:
           node-version: ${{ matrix.node-version }}
@@ -34,7 +34,8 @@ jobs:
 
     strategy:
       matrix:
-        release-it-version: ['14.0.0', '14.1.0', '14.2.0', '15.1.3', '^15.0.0', '^16.0.0', '^17.0.0']
+        release-it-version:
+          ['14.0.0', '14.1.0', '14.2.0', '15.1.3', '^15.0.0', '^16.0.0', '^17.0.0']
 
     steps:
       - uses: actions/checkout@v3.5.3
