--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eta": "^3.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "release-it": "^19.0.0",
